<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Space Launch Now</string>
    <string name="news">News</string>
    <string name="twitter">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="status_go">"Go for Launch"</string>
    <string name="status_nogo">Launch Date Unconfirmed</string>
    <string name="status_success">"Successful Launch"</string>
    <string name="status_failure">"Launch Failure Occurred"</string>
    <string name="general_settings">General settings for launch tracking and application behavior.</string>
    <string name="supporter_title">Become a Supporter</string>
    <string name="supporter_description">Help ensure continued support, timely bug fixes, and new features.</string>
    <string name="supporter_again_footer">New 2022 Supporter Available!</string>
    <string name="slide_one_title">Space Launch Now</string>
    <string name="slide_one_description">Keep up to date on all your favorite orbital launches, missions, and launch vehicles.</string>
    <string name="slide_two_title">Notification for Launches</string>
    <string name="slide_two_description">Get notifications for upcoming launches and look into the history of spaceflight</string>
    <string name="slide_three_title">Find Launch Vehicles</string>
    <string name="slide_three_description">Get to know the vehicles that have taken us to orbit.</string>
    <string name="thank_you">This application, Space Launch Now, started as a simple weekend project. In the course of a year its grown to nearly 10,000 active users. I am incredibly appreciative to everyone that has taken the time to report bugs, give feedback, participate in BETA\'s and become supporters.</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="please_rate">Hey there! You seem to like this app, would you mind visiting the Play Store and give a rating? It would help us a great deal!
    \n\nIf instead you hate this app, we would love to hear your feedback so we can improve. Thanks!</string>
    <string name="please_rate_short">Hey, you seem to like this app. You would help us a great deal with a 5-star rating! Otherwise if you have suggestions - please let us know.</string>
    <string name="button_yes">Rate!</string>
    <string name="button_no">No thanks</string>
    <string name="button_feedback">Give Feedback</string>
    <string name="button_dont_ask">Don’t ask again</string>
    <string name="swipe_to_dismiss">Swipe to Dismiss</string>
    <string name="notifications_settings">Set up launch notifications and scheduling.</string>
    <string name="appearance_settings">Customize app theme, widgets and colors.</string>
    <string name="about_settings">Application information about license, libraries, changelog, etc</string>
    <string name="support_settings">Get pro features and contribute to future development.</string>
    <string name="wear_settings">Change Android Wear watch face settings.</string>
    <string name="supporter_unlock_text">I appreciate you considering supporting Space Launch Now. \n\nEvery level of support is a one-time purchase that unlocks all pro-features forever. Pay what you want to support continued development and updates!</string>
    <string name="thank_you_support">Thank you for your continued support!</string>
    <string name="ok">OK</string>
    <string name="issues_connecting_billing">Issues connecting to Google Play Billing</string>
    <string name="thanks_support_development">Thanks for helping support development!</string>
    <string name="billing_error_code">billing error code -</string>
    <string name="purchase_history">Purchase history restored.</string>
    <string name="unable_to_start_billing">Unable to initialize Billing Processor.</string>
    <string name="no_purchase_history">Purchases restored - none found with this Google account.</string>
    <string name="billing_not_available">Google Play billing services not available.</string>
    <string name="whats_new">Whats New?</string>
    <string name="unknown_rocket">Unknown Rocket</string>
    <string name="appearance_description">Customize app theme and colors.</string>
    <string name="settings">Settings</string>
    <string name="local_timezone">Local Timezone</string>
    <string name="local_timezone_on">Launch times locally translated times to fit your current timezone.</string>
    <string name="local_timezone_off">Launch times to be represented in UTC.</string>
    <string name="time_format">Time Format</string>
    <string name="time_format_on">Launch times in 24 hour.</string>
    <string name="time_format_off">Launch times in AM/PM.</string>
    <string name="widget_themes">Widget Themes</string>
    <string name="widget_themes_summary">Select from a few default widget themes.</string>
    <string name="widget_background">Widget Background</string>
    <string name="widget_background_summary">Select background color for widgets.</string>
    <string name="primary_text">Primary Text Color</string>
    <string name="primary_text_summary">Select the primary text color for widgets.</string>
    <string name="secondary_text">Secondary Text Color</string>
    <string name="secondary_text_summary">Select the secondary text color for widgets.</string>
    <string name="launch_list_widget_accent">Launch List Widget - Accent Color</string>
    <string name="launch_list_widget_accent_summary">Select the accent color for the Launch List widgets.</string>
    <string name="launch_list_widget_text">Launch List Widget - Title Text Color</string>
    <string name="launch_list_widget_text_summary">Select the text color for the Launch List widgets Title Text.</string>
    <string name="icon_color">Icon Color</string>
    <string name="icon_color_summary">Select the Icon color for the Launch Card widget.</string>
    <string name="hide_refresh">Hide Refresh</string>
    <string name="hide_refresh_summary">Hide the refresh button.</string>
    <string name="round_corners">Round Corners</string>
    <string name="round_corners_summary">Enable round corners for widgets.</string>
    <string name="enable_weather">Enable Weather</string>
    <string name="enable_weather_summary">Show weather card for upcoming launches in Launch details.</string>
    <string name="weather_type">Weather Measurement Type</string>
    <string name="weather_type_on">Use US based Imperial Units for temperature, wind speed and precipitation.</string>
    <string name="weather_type_off">Use metric based International System of Units for temperature, wind speed and precipitation.</string>
    <string name="calendar_settings">Calendar Settings</string>
    <string name="auto_calendar">Automatic Calendar Sync</string>
    <string name="auto_calendar_summary">Allow next Launch to sync with default Calendar.</string>
    <string name="calendar_account">Calendar Account</string>
    <string name="calendar_account_summary">Configure Calendar for Launch events.</string>
    <string name="event_reminder">Event Reminders</string>
    <string name="event_reminder_summary">Set custom reminders for calendar notifications.</string>
    <string name="calendar_account_dialog">Select a Calendar for Launch events.</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="confirm_exit_summary">Show confirm dialog before exit.</string>
    <string name="debug_logging">Debug Logging</string>
    <string name="debug_logging_summary">Enable Debug logging for crash investigations.</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enable_notifications_on">Notifications are on for upcoming launches.</string>
    <string name="enable_notifications_off">Allow Notifications for upcoming launches.</string>
    <string name="status_updates">Status Updates</string>
    <string name="status_updates_on">Receive update notification for launch status changes.</string>
    <string name="status_updates_off">Do not send notifications when a launch status changes.</string>
    <string name="webcast_only">Web-cast Only</string>
    <string name="webcast_only_summary">Only send notifications when a webcast is available.</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="wear">Wear</string>
    <string name="Support">Become a Supporter</string>
    <string name="about">About</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="ringtone_summary">Select a custom notification ringtone.</string>
    <string name="ringtone">Ringtone</string>
    <string name="priority_summary">Heads-up notification, sound and vibration by default.</string>
    <string name="priority">Priority</string>
    <string name="vibration_summary">Allow vibration for notifications.</string>
    <string name="vibration">Vibration</string>
    <string name="led_summary">Allow LED blink with notification. (Works on some devices)</string>
    <string name="led">LED Blink</string>
    <string name="test_notification_summary">Send a test notification.</string>
    <string name="test_notification">Notification Test</string>
    <string name="notification_interval">Notification Intervals</string>
    <string name="notification_interval_summary">Select intervals to receive launch notifications</string>
    <string name="twenty_four_hour_title">24 Hours</string>
    <string name="twenty_four_hour_on">Receive notification when a Launch is within 24 hours.</string>
    <string name="twenty_four_hour_off">Do not notify for launches within 24 hours.</string>
    <string name="one_hour_title">One Hour</string>
    <string name="one_hour_on">Receive notification when a Launch is within one hour.</string>
    <string name="one_hour_off">Do not notify when a Launch is imminent.</string>
    <string name="ten_minutes_title">Ten Minutes</string>
    <string name="ten_minutes_on">Receive notification when a Launch is within ten minutes.</string>
    <string name="ten_minutes_off">Do not notify when a Launch is within ten minutes.</string>
    <string name="widgets">Widgets</string>
    <string name="weather">Weather</string>
    <string name="translate_settings">Contribute to translating Space Launch Now!</string>
    <string name="translate">Translate</string>
    <string name="settings_in_flight">In Flight</string>
    <string name="settings_in_flight_summary">Receive notifications when a launch is confirmed in-flight.</string>
    <string name="settings_success">Success</string>
    <string name="settings_success_summary">Receive notifications when a launch is confirmed successful or not.</string>
    <string name="settings_one_minute">One Minute</string>
    <string name="settings_one_minute_on">Receive notification when a Launch is within one minute.</string>
    <string name="settings_one_minute_off">Do not notify when a Launch is within one minute.</string>
    <string name="notification_filters">Notification Filters</string>
    <string name="notification_filter_description">Select which launch notifications you prefer.</string>
    <string name="use_system_language">Use System Language</string>
    <string name="force_english">Force English language.</string>
    <string name="force_english_off">Use your devices language.</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="set_custom_calendar">Set custom reminders for calendar notifications.</string>
    <string name="event_and_news">Events and News Notifications</string>
    <string name="event_and_news_description">Receive notifications for post-launch spaceflight events and news.</string>
    <string name="choose_theme_mode">Choose Theme Mode</string>
    <string translatable="false" name="theme_pref_key">theme_pref</string>
</resources>