<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings">
    <PreferenceCategory
        android:summary="@string/general_settings"
        android:title="@string/general"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:key="locale_changer"
            android:defaultValue="true"
            android:summaryOn="@string/force_english_off"
            android:summaryOff="@string/force_english"
            android:title="@string/use_system_language"
            app:iconSpaceReserved="false"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="local_time"
            android:summaryOff="@string/local_timezone_off"
            android:summaryOn="@string/local_timezone_on"
            android:title="@string/local_timezone"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="24_hour_mode"
            android:summaryOff="@string/time_format_off"
            android:summaryOn="@string/time_format_on"
            android:title="@string/time_format"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="confirm_exit"
            android:summary="@string/confirm_exit_summary"
            android:title="@string/confirm_exit"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="debug_logging"
            android:summary="@string/debug_logging_summary"
            android:title="@string/debug_logging"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="appearance_category"
        android:summary="@string/appearance_description"
        android:title="@string/appearance"
        app:iconSpaceReserved="false">
        <ListPreference
            app:key="@string/theme_pref_key"
            app:title="@string/choose_theme_mode"
            app:defaultValue="default"
            app:dialogTitle="@string/choose_theme"
            app:entries="@array/theme_list_array"
            app:entryValues="@array/theme_entry_array"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="calendar_category"
        android:title="@string/calendar_settings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="calendar_sync_state"
            android:summary="@string/auto_calendar_summary"
            android:title="@string/auto_calendar"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="0"
            android:dependency="calendar_sync_state"
            android:dialogMessage="@string/calendar_account_dialog"
            android:key="default_calendar_state"
            android:summary="@string/calendar_account_summary"
            android:title="@string/calendar_account"
            android:entries="@array/empty"
            android:entryValues="@array/empty"
            app:iconSpaceReserved="false" />

        <MultiSelectListPreference
            android:defaultValue="@array/multi_calendar_reminder_default"
            android:dependency="calendar_sync_state"
            android:dialogMessage="@string/set_custom_calendar"
            android:entries="@array/multi_calendar_reminder"
            android:entryValues="@array/multi_calendar_reminder_values"
            android:key="calendar_reminder_array"
            android:persistent="true"
            android:summary="@string/event_reminder_summary"
            android:title="@string/event_reminder"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="widget_category"
        android:title="@string/widgets"
        app:iconSpaceReserved="false">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/widget_presets"
            android:entryValues="@array/widget_presets_values"
            android:key="widget_presets"
            android:summary="@string/widget_themes_summary"
            android:title="@string/widget_themes"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="0xFF303030"
            android:key="widget_background_color"
            android:summary="@string/widget_background_summary"
            android:title="@string/widget_background"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/white"
            android:key="widget_text_color"
            android:summary="@string/primary_text_summary"
            android:title="@string/primary_text"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="0xB3FFFFFF"
            android:key="widget_secondary_text_color"
            android:summary="@string/secondary_text_summary"
            android:title="@string/secondary_text"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="0xFF455A64"
            android:key="widget_list_accent_color"
            android:summary="@string/launch_list_widget_accent_summary"
            android:title="@string/launch_list_widget_accent"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/white"
            android:key="widget_title_text_color"
            android:summary="@string/launch_list_widget_text_summary"
            android:title="@string/launch_list_widget_text"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/white"
            android:key="widget_icon_color"
            android:summary="@string/icon_color_summary"
            android:title="@string/icon_color"
            app:cpv_allowPresets="true"
            app:cpv_previewSize="large"
            app:cpv_showAlphaSlider="true"
            app:cpv_showColorShades="false"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="widget_refresh_enabled"
            android:summary="@string/hide_refresh_summary"
            android:title="@string/hide_refresh"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="widget_theme_round_corner"
            android:summary="@string/round_corners_summary"
            android:title="@string/round_corners"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="weather_category"
        android:title="@string/weather"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="weather"
            android:summary="@string/enable_weather_summary"
            android:title="@string/enable_weather"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="weather_US_SI"
            android:summaryOff="@string/weather_type_off"
            android:summaryOn="@string/weather_type_on"
            android:title="@string/weather_type"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification_preferences"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notificationEnabled"
            android:summaryOff="@string/enable_notifications_off"
            android:summaryOn="@string/enable_notifications_on"
            android:title="@string/enable_notifications"
            app:iconSpaceReserved="false" />
        <Preference
            android:defaultValue="true"
            android:key="notification_filters"
            android:summary="@string/notification_filter_description"
            android:title="@string/notification_filters"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="netstampChanged"
            android:summaryOff="@string/status_updates_off"
            android:summaryOn="@string/status_updates_on"
            android:title="@string/status_updates"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="inFlight"
            android:summary="@string/settings_in_flight_summary"
            android:title="@string/settings_in_flight"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="success"
            android:summary="@string/settings_success_summary"
            android:title="@string/settings_success"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="eventNotifications"
            android:summary="@string/event_and_news_description"
            android:title="@string/event_and_news"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="notificationEnabled"
            android:key="webcastOnly"
            android:summary="@string/webcast_only_summary"
            android:title="@string/webcast_only"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="notifications_new_message_heads_up"
            android:summary="@string/priority_summary"
            android:title="@string/priority"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="notifications_new_message_vibrate"
            android:summary="@string/vibration_summary"
            android:title="@string/vibration"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="notifications_new_message_led"
            android:summary="@string/led_summary"
            android:title="@string/led"
            app:iconSpaceReserved="false" />

        <Preference
            android:defaultValue="true"
            android:dependency="notificationEnabled"
            android:key="notifications_new_message_test"
            android:summary="@string/test_notification_summary"
            android:title="@string/test_notification"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:dependency="notificationEnabled"
        android:summary="@string/notification_interval_summary"
        android:title="@string/notification_interval"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="twentyFourHour"
            android:summaryOff="@string/twenty_four_hour_off"
            android:summaryOn="@string/twenty_four_hour_on"
            android:title="@string/twenty_four_hour_title"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="oneHour"
            android:summaryOff="@string/one_hour_off"
            android:summaryOn="@string/one_hour_on"
            android:title="@string/one_hour_title"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="tenMinutes"
            android:summaryOff="@string/ten_minutes_off"
            android:summaryOn="@string/ten_minutes_on"
            android:title="@string/ten_minutes_title"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="oneMinute"
            android:summaryOff="@string/settings_one_minute_off"
            android:summaryOn="@string/settings_one_minute_on"
            android:title="@string/settings_one_minute"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>