<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <de.mrapp.android.preference.activity.NavigationPreference
        android:fragment="me.calebjones.spacelaunchnow.common.ui.settings.fragments.GeneralFragment"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/general"
        android:summary="@string/general_settings"
        android:breadCrumbTitle="@string/general" />
    <de.mrapp.android.preference.activity.NavigationPreference
        android:fragment="me.calebjones.spacelaunchnow.common.ui.settings.fragments.NotificationsFragment"
        android:icon="@drawable/ic_notifications_white"
        android:title="@string/notifications"
        android:summary="@string/notifications_settings"
        android:breadCrumbTitle="@string/notifications"/>
    <de.mrapp.android.preference.activity.NavigationPreference
        android:fragment="me.calebjones.spacelaunchnow.common.ui.settings.fragments.AppearanceFragment"
        android:icon="@drawable/ic_appearance_white"
        android:title="@string/appearance"
        android:summary="@string/appearance_settings"
        android:breadCrumbTitle="@string/appearance"/>
    <de.mrapp.android.preference.activity.NavigationPreference
        android:icon="@drawable/ic_about"
        android:summary="@string/about_settings"
        android:title="@string/about">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.ui.AboutActivity"
            android:targetPackage="me.calebjones.spacelaunchnow"/>
    </de.mrapp.android.preference.activity.NavigationPreference>
    <de.mrapp.android.preference.activity.NavigationPreference
        android:icon="@drawable/ic_translate_white"
        android:summary="@string/translate_settings"
        android:title="@string/translate">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://goo.gl/forms/Pt4QA5JNznF2MiKu1"

            />
    </de.mrapp.android.preference.activity.NavigationPreference>
    <de.mrapp.android.preference.activity.NavigationPreference
        android:icon="@drawable/ic_support"
        android:summary="@string/support_settings"
        android:title="@string/Support">
        <intent
            android:targetClass="me.calebjones.spacelaunchnow.common.ui.supporter.SupporterActivity"
            android:targetPackage="me.calebjones.spacelaunchnow"/>
    </de.mrapp.android.preference.activity.NavigationPreference>

</PreferenceScreen>
