<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:persistent="false"
        android:key="launch_tracking_options"
        android:layout="@layout/settings_general"
        android:title="@string/general" />
    <Preference
        android:persistent="false"
        android:key="notifications"
        android:layout="@layout/settings_notifications"
        android:title="@string/notifications" />
    <Preference
        android:persistent="false"
        android:key="appearance"
        android:layout="@layout/settings_appearance"
        android:title="@string/appearance" />
    <Preference
        android:persistent="false"
        android:key="wear"
        android:layout="@layout/settings_wear"
        android:title="@string/wear" />
    <Preference
        android:persistent="false"
        android:key="about"
        android:layout="@layout/settings_about"
        android:title="@string/about" />
    <Preference
        android:persistent="false"
        android:key="support"
        android:layout="@layout/settings_support"
        android:title="@string/Support" />
</PreferenceScreen>